src/objects/MX_RTE_Iniciativa__c.object
<CustomObject>
    <description>No migrar</description>
    <fields>
        <fullName>MX_RTE_Alcance_Global_Local__c</fullName>
        <label>Alcance (Global / Local)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Ano_PI_Actual__c</fullName>
        <description>Devuelve los ultimos dos digitos del año actual</description>
        <formula>VALUE( RIGHT(  MX_RTE_PI_Actual__r.Name , 2 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Año Q Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Beneficio_a_la_Red__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beneficio a la Red</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Beneficio_al_Cliente__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Beneficio al Cliente</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Entregables__c</fullName>
        <description>Campo para capturar los entregables de una iniciativa</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Propuesta de Valor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Estatus__c</fullName>
        <description>Campo para la aplicación RTE, muestra el estatus de la iniciativa</description>
        <label>Estatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Transición</fullName>
                </value>
                <value>
                    <fullName>Por Graduarse</fullName>
                </value>
                <value>
                    <fullName>Graduado</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Descartado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Etiqueta__c</fullName>
        <description>Campo por el cual, se categoriza a una iniciativa</description>
        <label>Etiqueta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advice</fullName>
                </value>
                <value>
                    <fullName>Analytics &amp; Models</fullName>
                </value>
                <value>
                    <fullName>Capital &amp; Balance Sheet Management</fullName>
                </value>
                <value>
                    <fullName>Control Interno</fullName>
                </value>
                <value>
                    <fullName>CX</fullName>
                </value>
                <value>
                    <fullName>CX: Calidad</fullName>
                </value>
                <value>
                    <fullName>CX: Futuro</fullName>
                </value>
                <value>
                    <fullName>Data-Driven Organization-Transcendence</fullName>
                </value>
                <value>
                    <fullName>Data Quality &amp; Governance</fullName>
                </value>
                <value>
                    <fullName>Data y CRM</fullName>
                </value>
                <value>
                    <fullName>Digitalización de Procesos</fullName>
                </value>
                <value>
                    <fullName>DIY</fullName>
                </value>
                <value>
                    <fullName>Eficiencia</fullName>
                </value>
                <value>
                    <fullName>Eficiencia Real</fullName>
                </value>
                <value>
                    <fullName>Eficiencia Virtual</fullName>
                </value>
                <value>
                    <fullName>Existing Data Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Human &amp; Physical Touchpoints</fullName>
                </value>
                <value>
                    <fullName>Infraestructura Física</fullName>
                </value>
                <value>
                    <fullName>Infraestructura Lógica</fullName>
                </value>
                <value>
                    <fullName>Infrastructure (Data Center) Transformation</fullName>
                </value>
                <value>
                    <fullName>New CX &amp; Digital Sales Enablers</fullName>
                </value>
                <value>
                    <fullName>Non-Financial Risk Management</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Open Market</fullName>
                </value>
                <value>
                    <fullName>Other Technology Platforms</fullName>
                </value>
                <value>
                    <fullName>Other Technology Plattforms</fullName>
                </value>
                <value>
                    <fullName>Process Re-Engineering &amp; Automation</fullName>
                </value>
                <value>
                    <fullName>Regulatorio</fullName>
                </value>
                <value>
                    <fullName>Regulatorios</fullName>
                </value>
                <value>
                    <fullName>Regulatory &amp; Supervisors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Metodologia__c</fullName>
        <label>Metodología</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCRUM</fullName>
                    <default>true</default>
                    <label>SCRUM</label>
                </value>
                <value>
                    <fullName>DISCOVERY</fullName>
                </value>
                <value>
                    <fullName>KANBAN</fullName>
                </value>
                <value>
                    <fullName>WATERFALL</fullName>
                </value>
                <value>
                    <fullName>FAST TRACK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_No_PI_Actual__c</fullName>
        <description>Calcula el No. de PI según el mes actual</description>
        <formula>VALUE( LEFT(  MX_RTE_PI_Actual__r.Name , 1 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. Q Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Actual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Q Actual</label>
        <referenceTo>MX_RTE_PI__c</referenceTo>
        <relationshipLabel>Iniciativas (Q Actual)</relationshipLabel>
        <relationshipName>Iniciativas_PI_Actual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Estimado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Q en el que se estima se terminará la Iniciativa</description>
        <label>Q Estimado de Finalización</label>
        <referenceTo>MX_RTE_PI__c</referenceTo>
        <relationshipLabel>Iniciativas (Q FInal)</relationshipLabel>
        <relationshipName>Iniciativas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Extendido__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Q al que se ha decidido extender la finalización de la Iniciativa</description>
        <inlineHelpText>Q al que se ha decidido extender la finalización de la Iniciativa</inlineHelpText>
        <label>Q Extendido</label>
        <referenceTo>MX_RTE_PI__c</referenceTo>
        <relationshipLabel>Iniciativas (Q Extendido)</relationshipLabel>
        <relationshipName>Iniciativas2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Faltantes_Reales__c</fullName>
        <formula>IF
 (
   ISBLANK(MX_RTE_PI_Extendido__c),
   MX_RTE_PI_Faltantes__c,
   IF( 
   MX_RTE_PI_Extendido__r.MX_RTE_No_PI__c &gt; MX_RTE_No_PI_Actual__c , 
   ((MX_RTE_PI_Extendido__r.MX_RTE_Ano_PI__c - MX_RTE_Ano_PI_Actual__c )*4)+( MX_RTE_PI_Extendido__r.MX_RTE_No_PI__c - 
   MX_RTE_No_PI_Actual__c ), 
   ((MX_RTE_PI_Extendido__r.MX_RTE_Ano_PI__c - MX_RTE_Ano_PI_Actual__c)*4)-( MX_RTE_No_PI_Actual__c - 
   MX_RTE_PI_Extendido__r.MX_RTE_No_PI__c) 
   )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q&apos;s Faltantes (Reales)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Faltantes__c</fullName>
        <description>IF( 

      MX_RTE_PI_Estimado__r.MX_RTE_No_PI__c &gt;   MX_RTE_No_PI_Actual__c  , 

      ((MX_RTE_PI_Estimado__r.MX_RTE_Ano_PI__c -   MX_RTE_Ano_PI_Actual__c )*4)+( MX_RTE_PI_Estimado__r.MX_RTE_No_PI__c -  
        MX_RTE_No_PI_Actual__c  ),
 
      ((MX_RTE_PI_Estimado__r.MX_RTE_Ano_PI__c -  MX_RTE_Ano_PI_Actual__c)*4)-( MX_RTE_No_PI_Actual__c  - 
        MX_RTE_PI_Estimado__r.MX_RTE_No_PI__c)
   
)</description>
        <formula>IF
(
 ISBLANK( MX_RTE_PI_Final_Real__c ),
 IF( 
  ISBLANK(MX_RTE_PI_Extendido__c), 
  IF( 
     MX_RTE_PI_Estimado__r.MX_RTE_No_PI__c &gt;   MX_RTE_No_PI_Actual__c  , 
     ((MX_RTE_PI_Estimado__r.MX_RTE_Ano_PI__c -   MX_RTE_Ano_PI_Actual__c )*4)+ 
     (MX_RTE_PI_Estimado__r.MX_RTE_No_PI__c - MX_RTE_No_PI_Actual__c  )+1, 
     ((MX_RTE_PI_Estimado__r.MX_RTE_Ano_PI__c -  MX_RTE_Ano_PI_Actual__c)*4)- 
     (MX_RTE_No_PI_Actual__c  - MX_RTE_PI_Estimado__r.MX_RTE_No_PI__c)+1
   ), 
  IF( 
     MX_RTE_PI_Extendido__r.MX_RTE_No_PI__c &gt; MX_RTE_No_PI_Actual__c , 
     ((MX_RTE_PI_Extendido__r.MX_RTE_Ano_PI__c - MX_RTE_Ano_PI_Actual__c )*4)+ 
     (MX_RTE_PI_Extendido__r.MX_RTE_No_PI__c - MX_RTE_No_PI_Actual__c )+1, 
     ((MX_RTE_PI_Extendido__r.MX_RTE_Ano_PI__c - MX_RTE_Ano_PI_Actual__c)*4)- 
     (MX_RTE_No_PI_Actual__c - MX_RTE_PI_Extendido__r.MX_RTE_No_PI__c)+1 
   ) 
 ),
 0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Número de Q&apos;s que aún faltan para finalizar la Iniciativa (Se considera también el Q Actual)</inlineHelpText>
        <label>Q&apos;s Faltantes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Final_Real__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Q Final (Real)</label>
        <referenceTo>MX_RTE_PI__c</referenceTo>
        <relationshipLabel>Iniciativas (Q Final)</relationshipLabel>
        <relationshipName>Iniciativas3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Inicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Q en el cuál comenzó la iniciativa.</description>
        <label>Q Inicial</label>
        <referenceTo>MX_RTE_PI__c</referenceTo>
        <relationshipLabel>Iniciativa (Q Inicial)</relationshipLabel>
        <relationshipName>Iniciativas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Totales_Reales__c</fullName>
        <formula>IF
(
 ISBLANK( MX_RTE_PI_Extendido__c ),
 MX_RTE_PI_Totales__c,
 IF( 
 MX_RTE_PI_Extendido__r.MX_RTE_No_PI__c &gt; MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c , 
 ((MX_RTE_PI_Extendido__r.MX_RTE_Ano_PI__c - MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)+( MX_RTE_PI_Extendido__r.MX_RTE_No_PI__c - 
 MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c ), 
 ((MX_RTE_PI_Extendido__r.MX_RTE_Ano_PI__c - MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)-( MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c - 
 MX_RTE_PI_Extendido__r.MX_RTE_No_PI__c) 
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q&apos;s Totales (Reales)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Totales__c</fullName>
        <description>IF( 

      MX_RTE_PI_Estimado__r.MX_RTE_No_PI__c &gt;  MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c , 

      ((MX_RTE_PI_Estimado__r.MX_RTE_Ano_PI__c -  MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)+( MX_RTE_PI_Estimado__r.MX_RTE_No_PI__c -  
        MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c ),
 
      ((MX_RTE_PI_Estimado__r.MX_RTE_Ano_PI__c -  MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)-( MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c - 
        MX_RTE_PI_Estimado__r.MX_RTE_No_PI__c)
   
   )</description>
        <formula>MX_RTE_PI_Transcurridos__c +  MX_RTE_PI_Faltantes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Número total de Q&apos;s que se mantendrá abierta una Iniciativa</inlineHelpText>
        <label>Duración (Q&apos;s)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_PI_Transcurridos__c</fullName>
        <description>IF( 

       MX_RTE_No_PI_Actual__c  &gt;  MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c , 

      (( MX_RTE_Ano_PI_Actual__c -  MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)+( MX_RTE_No_PI_Actual__c  -  
        MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c ),
 
      ((MX_RTE_Ano_PI_Actual__c -  MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)-( MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c - 
        MX_RTE_No_PI_Actual__c )
   
   )</description>
        <formula>IF
(
   ISBLANK(MX_RTE_PI_Final_Real__c),
   IF( 
       MX_RTE_No_PI_Actual__c  &gt;  MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c , 
      (( MX_RTE_Ano_PI_Actual__c -  MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)+ 
      (MX_RTE_No_PI_Actual__c  - MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c ), 
      ((MX_RTE_Ano_PI_Actual__c -  MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)- 
      (MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c - MX_RTE_No_PI_Actual__c )
   ),
   IF( 
      MX_RTE_PI_Final_Real__r.MX_RTE_No_PI__c   &gt;  MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c , 
      ((MX_RTE_PI_Final_Real__r.MX_RTE_Ano_PI__c  -  MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)+ 
      (MX_RTE_PI_Final_Real__r.MX_RTE_No_PI__c  - MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c )+1, 
      ((MX_RTE_PI_Final_Real__r.MX_RTE_Ano_PI__c -  MX_RTE_PI_Inicio__r.MX_RTE_Ano_PI__c)*4)- 
      (MX_RTE_PI_Inicio__r.MX_RTE_No_PI__c - MX_RTE_PI_Final_Real__r.MX_RTE_No_PI__c )+1  
   ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Campo que calcula cuantos Q&apos;s han transcurrido desde el Q´s Inicial hasta el actual</inlineHelpText>
        <label>Q&apos;s Transcurridos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Portafolio__c</fullName>
        <label>Portafolio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                    <isActive>false</isActive>
                    <label>BD</label>
                </value>
                <value>
                    <fullName>BD (Business Development)</fullName>
                </value>
                <value>
                    <fullName>BEyG (Banca de Empresas y Gobierno)</fullName>
                </value>
                <value>
                    <fullName>BMI</fullName>
                    <isActive>false</isActive>
                    <label>BMI</label>
                </value>
                <value>
                    <fullName>CIB (Costumer Invest Banking)</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Experiencia Unica y Vinculación</fullName>
                </value>
                <value>
                    <fullName>Finanzas</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                    <isActive>false</isActive>
                    <label>GM</label>
                </value>
                <value>
                    <fullName>Juridico</fullName>
                </value>
                <value>
                    <fullName>Presidencia</fullName>
                    <isActive>false</isActive>
                    <label>Presidencia</label>
                </value>
                <value>
                    <fullName>Riesgos</fullName>
                </value>
                <value>
                    <fullName>TMP</fullName>
                    <isActive>false</isActive>
                    <label>TMP</label>
                </value>
                <value>
                    <fullName>TMP (Transformación del modelo productivo)</fullName>
                </value>
                <value>
                    <fullName>TYC</fullName>
                    <isActive>false</isActive>
                    <label>TYC</label>
                </value>
                <value>
                    <fullName>TyC (Talento y Cultura)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_RTE_Procesos_Back__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Procesos Back</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Product_Owner_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que se actualiza si la iniciativa cuenta con un Product Owner asignado.</description>
        <inlineHelpText>Tiene que haber exactamente un Product Owner asignado a la iniciativa.</inlineHelpText>
        <label>Product Owner check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Product_Owner__c</fullName>
        <description>Campo para la aplicación RTE que permite ver el PO responsable de la iniciativa</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Programa_Anterior__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo para seleccionar el programa inmediato anterior al actual</description>
        <label>Programa Anterior</label>
        <referenceTo>MX_RTE_Programas__c</referenceTo>
        <relationshipLabel>Iniciativas (Programa Anterior)</relationshipLabel>
        <relationshipName>Iniciativas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Programa_Global__c</fullName>
        <label>Programa</label>
        <referenceTo>MX_RTE_Programas__c</referenceTo>
        <relationshipLabel>Iniciativas</relationshipLabel>
        <relationshipName>Iniciativas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Ranking_BBVA__c</fullName>
        <label>Ranking BBVA</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_RTE_SDATOOL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SDATOOL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Scrum_Master_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que se actualiza si la iniciativa cuenta con Scrum Master asignado.</description>
        <inlineHelpText>Tiene que haber exactamente un Scrum Master asignado a la iniciativa</inlineHelpText>
        <label>Scrum Master check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Scrum_Master__c</fullName>
        <description>Campo para la aplicación RTE, que permite definir al Scrum Master responsable</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Scrum Master</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Stake_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo con el cual se relaconada a un usuario (contacto) como stake holder con una iniciativa</description>
        <label>Stake Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Iniciativas</relationshipLabel>
        <relationshipName>Iniciativas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_Stake_holder_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Nombre del 2do Stake Holder, en caso de que exista alguno.</description>
        <label>Stake holder 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Iniciativas (Stake holder 2)</relationshipLabel>
        <relationshipName>Iniciativas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_RTE_TIER__c</fullName>
        <description>Clasificación respecto a la globalidad de una Iniciativa</description>
        <inlineHelpText>T0-El Progam Manager Global no conoce este proyecto,
T1-Lo conoce el PM Global,
T2-Global Program Manager knows roadmap,
T3-Definition and Design common to all count,
T4-Definition, Design, Front developement and/or APIs common to all countries.</inlineHelpText>
        <label>TIER</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MX_RTE_Alcance_Global_Local__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T0</fullName>
                </value>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
                <value>
                    <fullName>T4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programa__c</fullName>
        <formula>MX_RTE_Programa_Global__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programa</label>
        <type>Text</type>
    </fields>
    <label>Iniciativa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MX_RTE_Estatus__c</columns>
        <columns>MX_RTE_Programa_Global__c</columns>
        <columns>MX_RTE_Product_Owner__c</columns>
        <columns>MX_RTE_Scrum_Master__c</columns>
        <columns>MX_RTE_Stake_Holder__c</columns>
        <columns>MX_RTE_PI_Inicio__c</columns>
        <columns>MX_RTE_PI_Actual__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre de Iniciativa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Iniciativas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MX_RTE_Pi_estimado_no_se_puede_modificar</fullName>
        <active>true</active>
        <description>El PI Estimado solo puede modificarse si la iniciativa tiene estatus de &quot;Nuevo&quot;, para extender la duración de la iniciativa, se debe utilizar el botón &quot;Extensión de PI Estimado&quot;</description>
        <errorConditionFormula>AND( ISCHANGED( MX_RTE_PI_Estimado__c ),
    NOT(ISPICKVAL( MX_RTE_Estatus__c, &quot;Nuevo&quot;))
)</errorConditionFormula>
        <errorMessage>El PI Estimado solo puede modificarse si la iniciativa tiene estatus de &quot;Nuevo&quot;, para extender la duración de la iniciativa, se debe utilizar el botón &quot;Extensión de PI Estimado&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_RTE_Graduada_Q</fullName>
        <active>true</active>
        <description>Regla de validación que no permite llenar el campo de Q Final Real si la iniciativa no está graduada, ni tampoco que la iniciativa se gradúe sin llenar el Q Final Real.</description>
        <errorConditionFormula>OR( 
     AND( ISPICKVAL(MX_RTE_Estatus__c, &quot;Graduado&quot;), ISBLANK( 
          MX_RTE_PI_Final_Real__c ) )

,


     AND( NOT(ISPICKVAL(MX_RTE_Estatus__c, &quot;Graduado&quot;)), NOT(ISBLANK( 
          MX_RTE_PI_Final_Real__c )) )

)</errorConditionFormula>
        <errorDisplayField>MX_RTE_PI_Final_Real__c</errorDisplayField>
        <errorMessage>No es posible llenar el campo Q Final (Real) si la iniciativa no está Graduada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MX_RTE_Validacion_Ongoing</fullName>
        <active>true</active>
        <description>Regla que no permite actualizar el estatus de una iniciativa a Ongoing, a menos que cuente con 1 Scrum Master y 1 Product Owner.</description>
        <errorConditionFormula>AND
(OR( MX_RTE_Scrum_Master_Check__c  = FALSE , MX_RTE_Product_Owner_Check__c  = FALSE),
ISPICKVAL( MX_RTE_Estatus__c , &quot;Ongoing&quot;))</errorConditionFormula>
        <errorMessage>La iniciativa debe contar con un Scrum Master y un Product Owner para poder cambiar el estatus a Ongoing</errorMessage>
    </validationRules>
</CustomObject>